--- a/config_sample.env
+++ b/config_sample.env
@@ -1,24 +1,21 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5838772691:AAH2anVPUD4s3O18VPEtddCV2LEDsrqJOVk"
+GDRIVE_FOLDER_ID = "1dAofvOwyOWxlhWTaDg89CKO3P4bfLbUZ"
+OWNER_ID = 5795435208
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 2425959
+TELEGRAM_HASH = "8b45dced76ef4ea882cb563a8d6ff021"
 UPSTREAM_REPO = "https://github.com/tekeayush/Mirror-bot"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+AUTHORIZED_CHATS = "-1001865469417"  # Split by space
+SUDO_USERS = "5795435208"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
+USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = ""
 STATUS_LIMIT = ""  # Recommend limit status to 4 tasks max
 UPTOBOX_TOKEN = ""
@@ -33,7 +30,7 @@ SHORTENER_API = ""
 # GDTOT ( provide gdtot cookies if you want to use GDTOT function )
 GDTOT_COOKIES = "crypt= ; PHPSESSID= "
 # qBittorrent
-IS_VPS = ""
+IS_VPS = "True"
 SERVER_PORT = "80"  # Only for VPS
 BASE_URL_OF_BOT = ""  # Required for Heroku
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
