--- a/config_sample.env
+++ b/config_sample.env
@@ -1,13 +1,13 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5838772691:AAH2anVPUD4s3O18VPEtddCV2LEDsrqJOVk"
+BOT_TOKEN = ""
 GDRIVE_FOLDER_ID = "1dAofvOwyOWxlhWTaDg89CKO3P4bfLbUZ"
 OWNER_ID = 5795435208
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 2425959
-TELEGRAM_HASH = "8b45dced76ef4ea882cb563a8d6ff021"
+TELEGRAM_API = 
+TELEGRAM_HASH = ""
 UPSTREAM_REPO = "https://github.com/tekeayush/Mirror-bot"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
